# android-automation-api

./: .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  debug.py  docker-compose.example.yaml  main.py  pyproject.toml  test.py  test_connect_phone.py
app/: __init__.py  main.py
app/api/: __init__.py  adb.py  app.py  device.py  input.py  navigation.py  script.py
app/core/: __init__.py  config.py  device.py
app/dependencies/: __init__.py  services.py
app/schemas/: __init__.py  action.py  device.py
app/services/: AGENTS.md  __init__.py  adb_service.py  app_service.py  base.py  input.py  navigation.py  script_executor.py  script_parser.py
frontend/: .env.example  .env.production  README.md  index.html  jsconfig.json  package-lock.json  package.json
frontend/dsl-examples/: ADVANCED_USAGE.md  BASIC_OPERATIONS.md  DSL_QUICK_REFERENCE.md  HUMAN_SIMULATION.md  README.md
frontend/src/: App.vue  main.js
frontend/src/api/: adb.js  app.js  device.js  index.js  input.js  navigation.js  request.js  script.js
frontend/src/components/: AGENTS.md  AdbManager.vue  AppManager.vue  CodeEditor.vue  DeviceCard.vue  InputControl.vue  NavigationControl.vue  ScreenPreview.vue  ScriptEditor.vue  XPathGenerator.vue
scripts/: ELEMENT_INFO_README.md  complex_workflow.script  data_collection.script  element_info_example.script  example.script  human_behavior.script  login_automation.script  syntax_check_example.script  test.script  variable_interpolation_example.script  上滑.script  下滑.script  右滑.script  左滑.script
tests/: test_device.py
(+14 files in other folders)
